--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,10 @@
 name = "moonboot"
 version = "0.1.0"
 edition = "2021"
+license = "MIT OR Apache-2.0"
+authors = ["Jan-Henrik Bruhn <rust@jhbruhn.de>"]
+repository = "https://github.com/jhbruhn/moonboot"
+keywords = ["embedded", "no_std", "bootloader", "framework", "ota", "fota", "updater"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
