--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ keywords = ["embedded", "no_std", "bootloader", "framework", "ota", "fota", "upd
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-moonboot-macros = { path = "./macros" }
+moonboot-macros = { path = "./macros", version = "0.1.0-dev" }
 heapless = {version = "0.7", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"], default-features = false, optional = true }
 cortex-m = { version = "0.7", optional = true }
@@ -36,8 +36,21 @@ defmt-info = []
 defmt-warn = []
 defmt-error = []
 
+[package.metadata.release]
+pre-release-replacements = [
+  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}"},
+  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
+  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}"},
+  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n\n## [Unreleased] - ReleaseDate", exactly=1},
+  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/assert-rs/predicates-rs/compare/{{tag_name}}...HEAD", exactly=1},
+]
+
+[workspace.metadata.release]
+shared-version = true
+
 [workspace]
 members = [
+    "macros",
     ".",
     "codegen",
 ]
