Add package metadata to all packages

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "moonboot"
+description = "OTA Bootloader Construction Framework for Rust no_std environments"
 version = "0.1.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
