--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -1,9 +1,12 @@
 [package]
-authors = ["Jan-Henrik Bruhn <hi@jhbruhn.de>"]
-description = "moonboot macros"
-edition = "2018"
+description = "Macros for moonboot bootloader framework"
+edition = "2021"
 name = "moonboot-macros"
 version = "0.1.0-dev"
+license = "MIT OR Apache-2.0"
+authors = ["Jan-Henrik Bruhn <rust@jhbruhn.de>"]
+repository = "https://github.com/jhbruhn/moonboot"
+keywords = ["embedded", "no_std", "bootloader", "framework", "ota", "fota", "updater"]
 
 [lib]
 proc-macro = true
