--- a/codegen/Cargo.toml
+++ b/codegen/Cargo.toml
@@ -1,7 +1,13 @@
 [package]
 name = "moonboot-codegen"
+description = "Code generation helpers for moonboot bootloader framework"
 version = "0.1.0-dev"
 edition = "2021"
+license = "MIT OR Apache-2.0"
+authors = ["Jan-Henrik Bruhn <rust@jhbruhn.de>"]
+repository = "https://github.com/jhbruhn/moonboot"
+keywords = ["embedded", "no_std", "bootloader", "framework", "ota", "fota", "updater"]
+
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
