Fix versions, let's fetz

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ keywords = ["embedded", "no_std", "bootloader", "framework", "ota", "fota", "upd
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-moonboot-macros = { path = "./macros", version = "0.1.0-dev" }
+moonboot-macros = { path = "./macros" }
 heapless = {version = "0.7", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"], default-features = false, optional = true }
 cortex-m = { version = "0.7", optional = true }
@@ -48,6 +48,7 @@ pre-release-replacements = [
 
 [workspace.metadata.release]
 shared-version = true
+dependent-version = "upgrade"
 
 [workspace]
 members = [
