--- a/codegen/Cargo.toml
+++ b/codegen/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "moonboot-codegen"
 description = "Code generation helpers for moonboot bootloader framework"
-version = "0.1.0-dev"
+version = "0.1.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 authors = ["Jan-Henrik Bruhn <rust@jhbruhn.de>"]
@@ -12,7 +12,7 @@ keywords = ["embedded", "no_std", "bootloader", "framework", "ota", "fota", "upd
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-moonboot = { path = "../", version = "0.1.0-dev" }
+moonboot = { path = "../" }
 
 [package.metadata.release]
 tag = false
