--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ keywords = ["embedded", "no_std", "bootloader", "framework", "fota"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-moonboot-macros = { path = "./macros" }
+moonboot-macros = { path = "./macros", version = "0.1.0" }
 heapless = {version = "0.7", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"], default-features = false, optional = true }
 cortex-m = { version = "0.7", optional = true }
@@ -38,6 +38,7 @@ defmt-warn = []
 defmt-error = []
 
 [package.metadata.release]
+shared-version = true
 pre-release-replacements = [
   {file="CHANGELOG.md", search="Unreleased", replace="{{version}}"},
   {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
