--- a/codegen/Cargo.toml
+++ b/codegen/Cargo.toml
@@ -12,7 +12,8 @@ keywords = ["embedded", "no_std", "bootloader", "framework", "fota"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-moonboot = { path = "../" }
+moonboot = { path = "../", version = "0.1.0" }
 
 [package.metadata.release]
 tag = false
+shared-version = true
