--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ moonboot-macros = { path = "./macros", version = "0.1.2" }
 heapless = {version = "0.7", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"], default-features = false, optional = true }
 cortex-m = { version = "0.7", optional = true }
-defmt = { version = "0.2", optional = true }
+defmt = { version = "0.3", optional = true }
 logger-crate = { version = "0.4", optional = true, package = "log" }
 crc = "2.0"
 desse = { version = "0.2.1", optional = true }
@@ -38,7 +38,7 @@ defmt-warn = []
 defmt-error = []
 
 [package.metadata.release]
-enable-features = ["ram-state", "ram-state", "cortex-m"]
+enable-features = ["ram-state", "cortex-m"]
 shared-version = true
 dependent-version = "upgrade"
 pre-release-replacements = [
